# RAG

./: .env.example  .gitignore  README.md  logging_conf.yaml  main.py  pyproject.toml
app/: run.py
app/src/: main.py
app/src/api/: __init__.py  main.py  utils.py
app/src/api/graph/: constants.py  dependencies.py  repository.py  router.py  schemas.py  service.py  utils.py  utlis.py  workflow.py
app/src/api/no_rag/: dependencies.py  router.py  schemas.py  service.py
app/src/api/vector/: constants.py  dependencies.py  router.py  schemas.py  service.py  utils.py
app/src/api/vector/documents/: dependencies.py  service.py
app/src/core/: __init__.py  config.py  exceptions.py  logger.py  ml_models.py
app/src/core/database/: constants.py  graph_database.py  vector_database.py
app/src/frontend/: __init__.py  main.py
app/src/frontend/static/js/: emb_page.js  graph_rag.js  simple_rag.js
app/src/frontend/static/js/modules/: api.js  loader.js  rag.js
app/src/frontend/templates/: emb_page.html  graph_rag.html  input.html  loader.html  simple_rag.html
app/tests/: test.py
graph_rag/: __init__.py  graph_chain.py  graph_loader.py  seed.py
vector_rag/: main.py
