[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "lmstudio>=1.5.0",
]
