[project]
name = "rag"
version = "0.1.0"
description = "RAG experiments: vector (ChromaDB) + graph (Neo4j)"
requires-python = ">=3.11"

dependencies = [
    # Graph RAG
    "langchain-neo4j>=0.3",
    "langchain-openai>=0.2",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    # Vector RAG
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    # Core
    "langchain-core>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["graph_rag", "vector_rag"]
