[project]
name = "rag"
version = "0.1.0"
description = "RAG experiments: vector (ChromaDB) + graph (Neo4j)"
requires-python = ">=3.11"

dependencies = [
    # Graph RAG
    "langchain-neo4j>=0.3",
    "langchain-openai>=0.2",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    # Vector RAG
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=5.5.1",
    "langchain-huggingface>=1.2.2",
    "chromadb>=0.5",
    # Core
    "langchain-core>=0.3",
    # API
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
